[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/altonen/emissary"
description = "Rust implementation of the I2P protocol stack"
readme = "README.md"
authors = []
keywords = ["i2p", "network", "privacy"]
categories = []

[workspace]
resolver = "2"

members = [
  "emissary-cli",
  "emissary-core",
  "emissary-util",
]

default-members = ["emissary-cli"]

[workspace.dependencies]
anyhow = "1.0.98"
ed25519-dalek = { version = "2.1.1", default-features = false }
flate2 = "1.1.2"
futures = "0.3.31"
nom = { version = "8.0", default-features = false }
parking_lot = "0.12"
rand = "0.9"
rand_core = { version = "0.9", default-features = false }
reqwest = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
smol = "2.0"
tempfile = "3.21"
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1.47", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter", "time"] }
tracing = { version = "0.1", default-features = false }
x25519-dalek = { version = "2.0", default-features = false }
yosemite = { version = "0.5", features = ["async-extra"] }

[profile.testnet]
inherits = "release"
debug = 1
debug-assertions = true
overflow-checks = true
