[package]
name = "emissary-cli"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
axum = { version = "0.8", default-features = false, features = ["ws", "macros", "tokio", "http1"], optional = true }
clap = { version = "4.5", features = ["derive"] }
emissary-core = { path = "../emissary-core", version = "0.2.0", features = ["std"] }
emissary-util = { path = "../emissary-util", version = "0.2.0", features = ["tokio"] }
futures = "0.3"
home = "0.5"
httparse = "1.10"
iced = { version = "0.13", features = ["advanced", "tokio"], optional = true }
igd-next = { version = "0.16", default-features = false, features = ["aio_tokio"] }
natpmp = "0.5"
netdev = { version = "0.37", default-features = false, features = ["gateway"] }
schnellru = "0.2"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio-tungstenite = { version = "0.27", default-features = false, features = ["native-tls"], optional = true }
toml = "0.9"
url = "2.5"

# workspace dependencies
anyhow = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core", "fast"] }
flate2 = { workspace = true }
parking_lot = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true, features = ["log"] }
x25519-dalek = { workspace = true, features = ["getrandom", "static_secrets", "precomputed-tables"] }
yosemite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
fast-socks5 = { version = "0.10", features = ["socks4"] }

[features]
default = ["native-ui"]
native-ui = ["iced"]
web-ui = ["axum", "serde_json", "tokio-tungstenite"]
metrics = ["emissary-util/metrics"]
